# pyserial_study

./: .gitignore  README.md
chapter1/: 2_bidectional.py
chapter1/arduino/0_from_arduino_to_rasspberrypi/: 0_from_arduino_to_rasspberrypi.ino
chapter1/arduino/1_lcd_i2c/: 1_lcd_i2c.ino
chapter1/arduino/bidrectional/: bidrectional.ino
chapter1/arduino/bidrectional_i2c_lcd/: bidrectional_i2c_lcd.ino
chapter1/arduino/from_raspberrypi_to_arduino/: from_raspberrypi_to_arduino.ino
chapter1/arduino/from_raspberrypi_to_arduino_i2c_lcd/: from_raspberrypi_to_arduino_i2c_lcd.ino
chapter1/cpp/: CMakeLists.txt
chapter1/cpp/src/: 0_arduino_to_raspberrypi.cpp  1_raspberrypi_to_arduino.cpp  2_bidirectional.cpp  bidirectional.cpp  libserial_script1.cpp  serial_port_write.cpp
chapter1/python/: 0_arduino_to_raspberrypi.py  1_raspberrypi_to_arduino.py
